--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
-    <color name="colorPrimaryDark">#0097A7</color>
-    <color name="primary_light">#B2EBF2</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="primary_light">#C5CAE9</color>
     <color name="colorAccent">#CDDC39</color>
     <color name="primary_text">#212121</color>
+    <color name="mid_red">#f44336</color>
     <color name="secondary_text">#757575</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_grey">#fafafa</color>
+    <color name="mid_grey">#eeeeee</color>
     <color name="divider">#BDBDBD</color>
 </resources>
