--- a/app/src/main/res/layout/item_chart.xml
+++ b/app/src/main/res/layout/item_chart.xml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+<androidx.cardview.widget.CardView android:id="@+id/infoCard"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/chartTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_margin_16_dp"
-        tools:text="Chart title will be here"
-        android:textColor="@color/secondary_text"
-        android:textSize="@dimen/font_20_sp"/>
-
-    <TextView
-        android:id="@+id/chartSubtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Chart description"
-        android:layout_marginTop="4dp"
-        android:textColor="@color/secondary_text"
-        android:layout_marginBottom="@dimen/global_margin_16_dp"/>
-
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/chartView"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
+    android:background="@color/mid_grey"
+    app:cardCornerRadius="8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/chartTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Chart title will be here"
+            android:textColor="@color/primary_text"
+            android:textSize="@dimen/font_18_sp"/>
+
+        <TextView
+            android:id="@+id/chartSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Chart description"
+            android:maxLines="2"
+            android:layout_marginTop="@dimen/margin_4_dp"
+            android:textColor="@color/secondary_text"
+            android:layout_marginBottom="@dimen/margin_4_dp"/>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chartView"
+            android:layout_width="match_parent"
+            android:layout_height="230dp" />
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
