--- a/app/src/main/res/layout/item_chart.xml
+++ b/app/src/main/res/layout/item_chart.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:id="@+id/infoCard"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="4dp"
-    android:layout_marginEnd="4dp"
+    android:layout_marginStart="@dimen/margin_4_dp"
+    android:layout_marginEnd="@dimen/margin_4_dp"
     android:background="@color/mid_grey"
-    app:cardCornerRadius="8dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    app:cardCornerRadius="@dimen/margin_8_dp">
+
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:orientation="vertical"
+        android:padding="@dimen/margin_8_dp">
 
         <TextView
             android:id="@+id/chartTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Chart title will be here"
             android:textColor="@color/primary_text"
-            android:textSize="@dimen/font_18_sp"/>
+            android:textSize="@dimen/font_18_sp"
+            tools:text="Chart title will be here" />
 
         <TextView
             android:id="@+id/chartSubtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Chart description"
-            android:maxLines="2"
             android:layout_marginTop="@dimen/margin_4_dp"
+            android:layout_marginBottom="@dimen/margin_4_dp"
+            android:maxLines="2"
             android:textColor="@color/secondary_text"
-            android:layout_marginBottom="@dimen/margin_4_dp"/>
+            tools:text="Chart description" />
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/chartView"
             android:layout_width="match_parent"
-            android:layout_height="230dp" />
+            android:layout_height="@dimen/chart_height" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
